--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "window": {
     "navigationBarBackgroundColor": "#AB956D",
     "navigationBarTextStyle": "#ffffff",
-    "navigationBarTitleText": "小程序",
+    "navigationBarTitleText": "",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
