--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wx63088796a5010ac5",
-	"projectname": "move3",
+	"projectname": "goodtimes",
 	"condition": {
 		"search": {
 			"current": -1,
