--- a/project.config.json
+++ b/project.config.json
@@ -20,13 +20,30 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 1,
+			"list": [
+				{
+					"id": 0,
+					"name": "detail",
+					"pathName": "pages/product/product",
+					"query": "id"
+				},
+				{
+					"id": 1,
+					"name": "detail",
+					"pathName": "pages/product/product",
+					"query": "id=1"
+				}
+			]
 		}
 	}
 }
